--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 version: '3'
 services: 
   web:
+    stdin_open: true
     build:
       context: .
       dockerfile: Dockerfile.dev
@@ -11,3 +12,14 @@ services:
       - .:/app
     environment: 
       - CHOKIDAR_USEPOLLING=true
+  tests:
+    stdin_open: true
+    build:
+      context: .
+      dockerfile: Dockerfile.dev
+    volumes:
+      - /app/node_modules
+      - .:/app
+    environment: 
+      - CHOKIDAR_USEPOLLING=true
+    command: ["npm", "run", "test"]
