--- a/.travis.yml
+++ b/.travis.yml
@@ -4,3 +4,6 @@ services:
 
 before_install:
   - docker build -t ryanwoodward/docker-react -f Dockerfile.dev .
+
+script:
+  - docker run -e CI=true ryanwoodward/docker-react npm run test
