--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,4 @@ before_install:
   - docker build -t ryanwoodward/docker-react -f Dockerfile.dev .
 
 script:
-  - docker run -e CI=true ryanwoodward/docker-react npm run blah
+  - docker run -e CI=true ryanwoodward/docker-react npm run test
